# HeapVisualizer

./: .gitignore  CMakeLists.txt
resources/: qml.qrc
src/: globals.cpp  globals.h  main.cpp
src/model/: heapalgorithms.cpp  heapalgorithms.h  heapalgorithmvisualizer.h
src/model/snapshots/: addnodesnapshot.h  heapsortsnapshot.h  removemaxsnapshot.h
src/model/visualizers/: addnodevisualizer.cpp  addnodevisualizer.h  heapalgorithmvisualizer.h  heapsortvisualizer.cpp  heapsortvisualizer.h  removemaxvisualizer.cpp  removemaxvisualizer.h
src/persistence/: csvfilemanager.cpp  csvfilemanager.h  filemanager.h  inisettingsmanager.cpp  inisettingsmanager.h  settings.h  settingsmanager.h  treefileinfo.cpp  treefileinfo.h
src/utils/: utils.cpp  utils.h
src/view/: modelmanager.cpp  modelmanager.h
src/view/models/: completebinarytree.h  editormodel.cpp  editormodel.h  homemodel.cpp  homemodel.h  settingsmodel.cpp  settingsmodel.h  visualizermodel.cpp  visualizermodel.h
src/view/ui/: Main.qml  qmlglobals.cpp  qmlglobals.h
src/view/ui/general/: HoverButton.qml  Modal.qml  Section.qml  SidebarButton.qml  StyledButton.qml  StyledRadioButton.qml
src/view/ui/logic/: Animations.js  Colors.js  PositionCalculator.js  Utils.js
src/view/ui/pages/: EditorPage.qml  HomePage.qml  SettingsPage.qml  VisualizerPage.qml
